# SURFA

./: .gitignore  CITATION.cff  Dockerfile  README.md  gtf_to_json.py  make_json.py  make_uorf_db.py  package-lock.json  package.json  pyproject.toml  schema.json  uv_pyproject.toml  zensical.toml
.github/: pull_request_template.md
.github/workflows/: main.yml
data/: seqid_map.csv  uorfs.json
docker/: Dockerfile  entrypoint.sh  pyproject.toml
docker/tests/: minifasta.fa  minifasta.fa.fai
docker/tests/mini_db/: make_mini_db.py
docs/: annotations.md  api.md  index.md  schema.md
flask-uorfs/: README.md  __init__.py  app.py
flask-uorfs/static/: exportSvg.js  main.js  render.js
flask-uorfs/templates/: base.html
python/: dataloader.py  debug_uorfs.py  exploration.py  get_seq.py  gtf_to_json.py  parse_gtf.py  renderpage.py  seqid_map.csv  uorfs.json
src/gtf_to_db/: __init__.py  db_utils.py  fasta_utils.py  gtf_to_json.py  json_converter.py  schema.json  uorf_utils.py
src/surfa/: __init__.py  cli.py  db_utils.py  schema.json  uorf_utils.py
src/surfa/commands/: build.py  query.py
src/uorf_viewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static_render_attempt/: README.md  display_details.js  exportSvg.js  index.html  inputs.js  package-lock.json  render.js  uorfs.json
tests/: build_test_db.sh  make_mini_db.py  mef2c_exon2_mrna.txt  mini.gtf  nrg1_noncoding_exons.fa  nrg1_transcript_mrna.txt  run_tests.py  test_db_sequences.py  test_sequence_identity.py
tests/data/: mef2c_exon1_mrna.txt  mef2c_noncoding_exons.fa  mef2c_transcript_mrna.txt  mef2c_utr_mrna_sequence.fa  minifasta.fa  minifasta.fa.fai  nrg1_utr_mrna_sequence.fa
tests/integration/: build_test_db.sh  test_sequence_identity.py
tests/unit/: uorf_utils_test.py
viewer/: README.md  observablehq.config.js  package-lock.json
viewer/src/: index.md
