[project]
name = "uorf-viewer"
version = "0.1.0"
description = "Interactive browser for upstream open reading frames."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3,<3.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mkdocstrings-python>=2.0.4",
    "ruff>=0.13.3",
    "zensical>=0.0.44",
]
