[project]
name = "uorf-viewer"
version = "0.1.0"
description = "Interactive browser for upstream open reading frames."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3,<3.0.0",
    "pymdown-extensions>=10.21.3",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gtf_to_db = ["*.json"]

[dependency-groups]
dev = [
    "mkdocstrings-python>=2.0.4",
    "ruff>=0.13.3",
    "zensical>=0.0.44",
]
