[project]
name = "surfa"
version = "0.1.0"
description = "Library for calling upstream open reading frames from sequence data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3,<3.0.0",
    "pytest>=9.1.1",
]

[project.scripts]
surfa = "surfa.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
surfa = ["*.json"]

[dependency-groups]
dev = [
    "mdformat>=1.0.0",
    "mkdocstrings-python>=2.0.4",
    "ruff>=0.13.3",
    "zensical>=0.0.44",
]
